# herver

./: .gitignore  herver.cabal  package.yaml  stack.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Lib.hs
src/chapters/: Bytes.hs  Chunks.hs  Handles.hs
src/exercises/: FailAndBracket.hs
